--- a/exercise/index.html
+++ b/exercise/index.html
@@ -1,10 +1,14 @@
+<!DOCTYPE html>
 <html>
-  <head>
-    <title>Angular 2 AJAX Demo</title>
-  </head>
-
-  <body>
-    <app>Loading...</app>
-    <script src="build/app.js"></script>
-  </body>
+<head>
+  <base href="/" />
+  <title>DDR Mine</title>
+  <link rel="stylesheet" type="text/css" href="/app.build/app.build.css" />
+</head>
+<body>
+  <app></app>
+  <script src="app.build/polyfills.build.js"></script>
+  <script src="app.build/vendor.build.js"></script>
+  <script src="app.build/app.build.js"></script>
+</body>
 </html>
