--- a/exercise/index.html
+++ b/exercise/index.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <base href="/" />
-  <title>DDR Mine</title>
-  <link rel="stylesheet" type="text/css" href="/app.build/app.build.css" />
+  <title>Angular Component Demo</title>
+  <link rel="stylesheet" type="text/css" href="app.build/app.build.css" />
 </head>
 <body>
   <app></app>
